--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@mapbox/polyline": "^1.2.1",
+		"@types/geojson": "^7946.0.15",
 		"@types/mapbox__polyline": "^1.0.5",
 		"axios": "^1.7.9",
 		"maplibre-gl": "^5.0.1",
