--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 		"@mapbox/polyline": "^1.2.1",
 		"@types/mapbox__polyline": "^1.0.5",
 		"axios": "^1.7.9",
+		"lucide-react": "^0.473.0",
 		"maplibre-gl": "^5.0.1",
 		"next": "15.1.4",
 		"polyline-encoded": "^0.0.9",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
